Update Mosquitto configuration and add security credentials
- Modified mosquitto.conf to change persistence location and log destination.
- Commented out authentication and SSL/TLS configuration settings for potential future use.
- Added a new ACL file to define user permissions for MQTT topics.
- Created a password file with hashed credentials for three users: admin, sensor_client, and ems_client.
- Added SSL certificate files including CA certificate, server certificate, and private key.
- Included a certificate signing request (CSR) for the server.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,8 @@ services:
       - "9001:9001"
     environment:
       - TZ=UTC
+    volumes:
+      - ./config:/config
+      - ./data:/data
+      - ./log:/log
+      - ./secrets:/secrets
