--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -1,18 +1,18 @@
 persistence true
-persistence_location /mosquitto/data/
-log_dest file /mosquitto/log/mosquitto.log
+persistence_location /data/
+log_dest file /log/mosquitto.log
 
-# Authentication
-allow_anonymous false
-password_file /mosquitto/secrets/passwd
-acl_file /mosquitto/secrets/acl
+# # Authentication
+# allow_anonymous false
+# password_file /passwd
+# acl_file acl
 
 # SSL/TLS Configuration
-listener 8883
-certfile /mosquitto/secrets/server.crt
-cafile /mosquitto/secrets/ca.crt
-keyfile /mosquitto/secrets/server.key
-require_certificate false  # Set to true for client cert verification
+# listener 8883
+# certfile /ssl/server.crt
+# cafile /ssl/ca.crt
+# keyfile /ssl/server.key
+# require_certificate false  # Set to true for client cert verification
 
 # Non-SSL listener (recommend disabling in production)
 listener 1883
